Curios Needs a Special Mixins Dev Environment

--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,9 @@ minecraft {
             // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
             property 'forge.enabledGameTestNamespaces', 'examplemod'
 
+            property 'mixin.env.remapRefMap', 'true'
+            property 'mixin.env.refMapRemappingFile', "${buildDir}/createSrgToMcp/output.srg"
+
             mods {
                 examplemod {
                     source sourceSets.main
