--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,7 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+org.gradle.java.home=C:/Program Files/Java/jdk-17
 
 mc_version=1.19.2
 jei_version=11.6.0.1010
